iowow (1.4.2) UNRELEASED; urgency=medium

  * Added iwpool_printf (iwpool.h)

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 26 Mar 2020 18:03:46 +0700

iowow (1.4.1) testing; urgency=medium

  * Fixed possible data corruption in `_fsm_blk_allocate_aligned_lw` (iwfsmfile.c)
  * Better new SBLK blocks locality  (performance)

 -- Anton Adamansky <adamansky@gmail.com>  Sat, 07 Mar 2020 23:23:13 +0700

iowow (1.4.0) testing; urgency=medium

  * Implemented new compact and performant data storage format v2
  * Added WiredTiger v3.2.1 benchmarks
  * Added BerkeleyDB v5.3.28 benchmarks
  * Added TokyoCabinet v1.4.48 benchmarks

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 06 Mar 2020 23:23:16 +0700

iowow (1.3.37) testing; urgency=medium

  * Added iwrc iwp_mkdirs(const char *path) (iwp.h)
  * Added uint32_t iwu_x31_u32_hash(const char *s) (iwutils.h)
  * Added iwu_replace() (iwutils.h)
  * Added RCGA macro definition
  * Removed IW_EXPORT iwrc iwkv_db_last_access_time(IWDB db, uint64_t *ts)
    for performance and simplicity reasons
  * Added `IW_ERROR_INVALID_VALUE`
  * Added iwstree - splay tree imlementation (iwstree.h)
  * Pointers allocated by iwpool are now 8-byte aligned

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 17 Feb 2020 23:16:31 +0700

iowow (1.3.36) testing; urgency=medium

  * Safer iowow initialization bootstrap process.

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 16 Jan 2020 12:44:31 +0700

iowow (1.3.35) testing; urgency=medium

  * Added specific checks for TARGET_OS_IPHONE
  * Ported to iOS
  * Added wal locking interceptor to WAL opts

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 15 Jan 2020 13:10:51 +0700

iowow (1.3.32) testing; urgency=medium

  * Improved WAL durability

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 19 Dec 2019 10:49:08 +0700

iowow (1.3.31) testing; urgency=medium

  * Keys comparison refactoring

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 20 Nov 2019 00:41:15 +0700
