@@ -10,11 +10,11 @@
       "name": "Debug",
       "type": "cppdbg",
       "request": "launch",
-      //"cwd": "${workspaceFolder}/build/src/kv/tests",
-      //"program": "${workspaceRoot}/build/src/kv/tests/iwkv_test4",
-      "program": "${workspaceFolder}/build/src/kv/benchmark/iwkv_benchmark",
-      "cwd": "${workspaceFolder}/build/src/kv/benchmark",
-      "args": ["-b", "fillrandom2", "-rs", "20378036"],
+      "cwd": "${workspaceFolder}/build/src/utils/tests",
+      "program": "${workspaceRoot}/build/src/utils/tests/iwutils_test1",
+      //"program": "${workspaceFolder}/build/src/kv/benchmark/iwkv_benchmark",
+      //"cwd": "${workspaceFolder}/build/src/kv/benchmark",
+      //"args": ["-b", "fillrandom2", "-rs", "20378036"],
       "stopAtEntry": false,
       "environment": [],
       "externalConsole": false,
