@@ -2,6 +2,7 @@
 #include "iwcfg.h"
 #include <CUnit/Basic.h>
 #include "iwutils.h"
+#include "iwpool.h"
 
 int init_suite(void) {
   return iw_init();
@@ -36,6 +37,59 @@ void test_iwu_replace_into(void) {
 }
 
 
+void test_iwpool_split_string() {
+  IWPOOL *pool = iwpool_create(128);
+  CU_ASSERT_PTR_NOT_NULL_FATAL(pool);
+  char **res = iwpool_split_string(pool, " foo , bar:baz,,z,", ",:", true);
+  CU_ASSERT_PTR_NOT_NULL_FATAL(res);
+  int i = 0;
+  for (; res[i]; ++i) {
+    switch (i) {
+      case 0:
+        CU_ASSERT_STRING_EQUAL(res[i], "foo");
+        break;
+      case 1:
+        CU_ASSERT_STRING_EQUAL(res[i], "bar");
+        break;
+      case 2:
+        CU_ASSERT_STRING_EQUAL(res[i], "baz");
+        break;
+      case 3:
+        CU_ASSERT_STRING_EQUAL(res[i], "");
+        break;
+      case 4:
+        CU_ASSERT_STRING_EQUAL(res[i], "z");
+        break;
+    }
+  }
+  CU_ASSERT_EQUAL(i, 5);
+
+  res = iwpool_split_string(pool, " foo , bar:baz,,z,", ",:", false);
+  CU_ASSERT_PTR_NOT_NULL_FATAL(res);
+  i = 0;
+  for (; res[i]; ++i) {
+    switch (i) {
+      case 0:
+        CU_ASSERT_STRING_EQUAL(res[i], " foo ");
+        break;
+      case 1:
+        CU_ASSERT_STRING_EQUAL(res[i], " bar");
+        break;
+      case 2:
+        CU_ASSERT_STRING_EQUAL(res[i], "baz");
+        break;
+      case 3:
+        CU_ASSERT_STRING_EQUAL(res[i], "");
+        break;
+      case 4:
+        CU_ASSERT_STRING_EQUAL(res[i], "z");
+        break;
+    }
+  }
+  CU_ASSERT_EQUAL(i, 5);
+  iwpool_destroy(pool);
+}
+
 int main() {
   CU_pSuite pSuite = NULL;
 
@@ -52,7 +106,10 @@ int main() {
   }
 
   /* Add the tests to the suite */
-  if ((NULL == CU_add_test(pSuite, "test_iwu_replace_into", test_iwu_replace_into))) {
+  if (
+      (NULL == CU_add_test(pSuite, "test_iwu_replace_into", test_iwu_replace_into)) ||
+      (NULL == CU_add_test(pSuite, "test_iwpool_split_string", test_iwpool_split_string))
+      ) {
     CU_cleanup_registry();
     return CU_get_error();
   }
