@@ -1,5 +1,6 @@
 iowow (1.4.2) UNRELEASED; urgency=medium
 
+  * Added iwpool_split_string (iwpool.h)
   * Added iwpool_printf (iwpool.h)
 
  -- Anton Adamansky <adamansky@gmail.com>  Thu, 26 Mar 2020 18:03:46 +0700
